--- a/template/layouts/index.html
+++ b/template/layouts/index.html
@@ -51,7 +51,7 @@
         <!-- Header -->
         <header class="header js-header ghost -f-zero">
             <div class="header__wrap ghost__child">
-                <div class="-wrap-l -column -column--2of4">
+                <div class="header__left -wrap-l -column -column--2of4">
                     <span class="target--refine icon-wrap js-controller--refine">
                         <span class="icon icon--search"></span>
                         <span class="icon icon--arrow"></span>
@@ -63,7 +63,7 @@
                         </span>
                     </a>
                 </div>
-                <div class="-wrap-r -column -column--2of4 -text--right">
+                <div class="header__right -wrap-r -column -column--2of4 -text--right">
                     <span class="target--grid icon-wrap js-controller--grid">
                         <span class="icon icon--grid"></span>
                     </span>
@@ -143,7 +143,7 @@
 
         <!-- Splash -->
         <section class="intro js-intro screen screen--light ghost -text--center is-active">
-            <h1 class="intro__text ghost__child animate animate--lift">
+            <h1 class="intro__text ghost__child animate">
                 <svg class="intro__svg" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="1522 -198 3684 1036" xml:space="preserve"><rect x="1531" y="91.8" width="168.2" height="719.2"/><path d="M5081.1 596.4c-63.4 0-115.3 51.9-115.3 116.7 0 63.4 51.9 115.3 115.3 115.3 64.8 0 116.7-51.9 116.7-115.3C5197.8 648.3 5145.9 596.4 5081.1 596.4zM2272 73.2c-106.5 0-193.3 53.5-234.6 102.8V91.8h-168.2V811h168.2V439c0-123.5 55.6-217.6 172.9-217.6 120.4 0 155.9 94.1 155.9 217.6v372h168.2V383.4c0-98.8-10.8-159-46.3-213C2448 110.2 2375.4 73.2 2272 73.2zM3245.6 173c-51.4-61.2-139-99.7-222.3-99.7 -219.2 0-368.9 174.4-368.9 378.1s149.7 378.1 368.9 378.1c83.4 0 174.8-41 222.3-99.7V811h168.2v-999h-168.2V173zM3032.6 679.8c-126.6 0-209.9-104.9-209.9-228.4S2906 223 3032.6 223c129.7 0 213 104.9 213 228.4S3162.2 679.8 3032.6 679.8z"/><polygon points="4901.2 91.8 4706.7 91.8 4574 317.1 4441.2 91.8 4246.7 91.8 4476.7 448.3 4242.1 811 4436.6 811 4574 579.5 4711.3 811 4905.8 811 4671.2 448.3 "/><path d="M3888.8 73.2c-226.9 0-355 162.1-355 378.1 0 211.5 117.3 378.2 359.6 378.2 183.7 0 293.8-99.6 322.6-234.6h-165.8c-20.1 51-61.1 87.9-156.8 87.9 -136.7 0-192.9-97.9-192.9-178.9H4219c1.7-19.5 2.5-38.7 2.5-56.8C4221.5 212.2 4083.5 73.2 3888.8 73.2zM3700.5 377c0-96 80.3-171.5 183.7-171.5 99.9 0 171.4 75.5 171.4 171.5H3700.5z"/></svg>
             </h1>
         </section>
@@ -172,7 +172,7 @@
                     <div class="h4">No Artists</div>
                 </div>
                 <div v-if="isgridview" class="index__list -f-zero -text--center -wrap">
-                    <div v-for="artist in documents" class="index__tile squaregrid__item artist__related__col -column--1of3 -exp-b animate js-animate {{artist.show ? '' : 'is-hidden'}}" data-uuid="{{artist.uuid}}">
+                    <div v-for="artist in documents" class="index__tile squaregrid__item artist__related__col -column--1of3 animate js-animate {{artist.show ? '' : 'is-hidden'}}" data-uuid="{{artist.uuid}}">
                         <div class="squaregrid__photo">
                             <figure class="squaregrid__figure">
                                 <a href="/artist/{{artist.uri}}/">
@@ -254,14 +254,14 @@
                                 <img class="video__play js-lazy-image" data-img-src="/images/playicon.png" />
                             </div>
                         </div>
-                        <div v-else class="artist__gallery__image fadeimage">
+                        <div v-else class="artist__gallery__image">
                             <img class="image image--{{parseInt( galleryItem.image.value.image.width, 10 ) > parseInt( galleryItem.image.value.image.height, 10 ) ? 'wide' : 'tall'}} js-lazy-image" data-img-src="{{galleryItem.image.value.image.url}}" />
                         </div>
                     </div>
                 </div>
                 <div class="artist__related__label h3 -wrap">Related Artists</div>
                 <div class="artist__related js-artist-related -wrap">
-                    <div v-for="relatedArtist in relatedArtists" class="squaregrid__item artist__related__col -column--1of3 -exp-b animate js-animate">
+                    <div v-for="relatedArtist in relatedArtists" class="squaregrid__item artist__related__col -column--1of3 animate js-animate">
                         <div class="squaregrid__photo">
                             <figure class="squaregrid__figure">
                                 <a href="/artist/{{relatedArtist.uri}}/">
