working on features

--- a/source/sass/core/_icons.scss
+++ b/source/sass/core/_icons.scss
@@ -125,7 +125,8 @@
     margin-right: 10px;
     }
 .target--grid,
-.target--back,
+.target--back-index,
+.target--back-features,
 .target--refine {
     display: none;
     }
