Working on final hit list

--- a/source/sass/modules/_artist.scss
+++ b/source/sass/modules/_artist.scss
@@ -28,10 +28,14 @@
     display: inline-block;
     }
 .artist__related__col {
-    span + span {
+    a + a {
         &:before {
+            color: $grey-text;
             content: " / ";
             }
+        }
+    a:hover:before {
+        color: $grey-text;
         }
 }
 .artist__info {
