--- a/source/sass/core/_icons.scss
+++ b/source/sass/core/_icons.scss
@@ -98,31 +98,45 @@
     width: 18px;
 
     &:before,
-    &:after {
+    &:after,
+    span:before,
+    span:after {
         background-color: $white;
         content: "";
         position: absolute;
         }
-    &:before {
-        height: 4px;
+
+    &:before,
+    &:after {
+        height: 3px;
         left: 0;
-        top: 50%;
-        transform: translateY( -50% );
         width: 100%;
         }
+    &:before {
+        top: 4px;
+        }
     &:after {
+        top: 11px;
+        }
+
+    span:before,
+    span:after {
         height: 100%;
-        left: 50%;
         top: 0;
-        transform: translateX( -50% );
-        width: 4px;
+        width: 3px;
+        }
+    span:before {
+        left: 4px;
+        }
+    span:after {
+        left: 11px;
         }
 }
 
 
 
 .target--grid {
-    margin-right: 10px;
+    margin-right: 20px;
     }
 .target--grid,
 .target--back-index,
@@ -131,7 +145,17 @@
     display: none;
     }
 .target--refine {
+    position: relative;
+    width: 100%;
+
     .icon--arrow {
         display: none;
+        }
+
+    .icon--search,
+    .icon--arrow {
+        position: absolute;
+        top: 50%;
+        transform: translateY( -50% );
         }
 }
