--- a/source/sass/config/_variables.scss
+++ b/source/sass/config/_variables.scss
@@ -73,6 +73,12 @@ $h1-size: 60px;
 $h2-size: 40px;
 $h3-size: 32px;
 $h4-size: 28px;
+$m-size-mobile: 14px;
+$p-size-mobile: 16px;
+$h1-size-mobile: 40px;
+$h2-size-mobile: 30px;
+$h3-size-mobile: 25px;
+$h4-size-mobile: 20px;
 
 
 
