--- a/source/sass/modules/_classes.scss
+++ b/source/sass/modules/_classes.scss
@@ -118,11 +118,8 @@
 
 
 
-.about,
-.submit {
-    height: 100%;
-    }
 .about {
+    height: 100%;
     position: relative;
     }
 
@@ -139,10 +136,13 @@
 
 
 
-.submit__wrap {
+.modal-form {
+    height: 100%;
+    }
+.modal-form__wrap {
     position: relative;
     }
-.submit__button {
+.modal-form__button {
     background-color: transparent;
     border: 0;
     border-radius: 3px;
@@ -169,7 +169,7 @@
         outline: 0;
         }
     }
-.submit__field {
+.modal-form__field {
     background-color: transparent;
     border: 0;
     border-bottom: 1px solid $white;
@@ -186,27 +186,27 @@
         outline: 0;
         }
     }
-.submit__message {
+.modal-form__message {
     pointer-events: none;
     }
-.submit.is-active {
-    .submit__form {
+.modal-form.is-active {
+    .modal-form__form {
         opacity: 1;
         transform: translate3d( 0, 0, 0 );
         }
 }
-.submit.is-valid-field {
-    .submit__button {
+.modal-form.is-valid-field {
+    .modal-form__button {
         opacity: 1;
         pointer-events: auto;
         }
 }
-.submit.is-submit {
-    .submit__message {
+.modal-form.is-submit {
+    .modal-form__message {
         opacity: 1;
         transform: translate3d( 0, 0, 0 );
         }
-    .submit__form {
+    .modal-form__form {
         display: none;
         }
 }
